@@ -1,3 +1,7 @@
+Fri Nov 13 09:58:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (Init_sym): use separate object space.
+
 Thu Nov 12 16:34:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* vm.c (thread_recycle_stack, rb_thread_recycle_stack_release):
